--- a/pos/common/i18n/en.i18n.json
+++ b/pos/common/i18n/en.i18n.json
@@ -749,6 +749,27 @@
     },
     "penalty":{
       "title":"Penalty"
+    },
+    "exchangeRate": {
+      "title": "Exchange Rate",
+      "invoiceAction": "Exchange Rate",
+      "schema": {
+        "_id": {
+          "label": "ID"
+        },
+        "base": {
+          "label": "Base"
+        },
+        "symbol": {
+          "label": "Symbol"
+        },
+        "rates": {
+          "label": "Rates"
+        },
+        "branchId": {
+          "label": "Branch"
+        }
+      }
     }
   }
 }
