--- a/pos/common/i18n/en.i18n.json
+++ b/pos/common/i18n/en.i18n.json
@@ -337,6 +337,7 @@
     },
     "invoice": {
       "title": "Invoice",
+      "new":"New Invoice",
       "invoiceAction": "invoice",
       "schema": {
         "_id": {
