update invoice new form

--- a/pos/common/i18n/en.i18n.json
+++ b/pos/common/i18n/en.i18n.json
@@ -487,6 +487,7 @@
       }
     },
     "custom": {
+      "payAndPrint":"Pay & Print",
       "saveAndPrint": "Save & Print",
       "pay": "Pay"
     },
